--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,6 @@ supabase  # <--- Changed from supabase-py
 python-dotenv
 joblib
 # You'll likely need one of these for the actual filtering/checking:
-# regex
+regex
 # OR
 # transformers
