--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,7 @@
 fastapi
 uvicorn[standard]
 pydantic
-supabase  # <--- Changed from supabase-py
+supabase
 python-dotenv
 joblib
-# You'll likely need one of these for the actual filtering/checking:
 regex
-# OR
-# transformers
